--- a/pipeline.conf
+++ b/pipeline.conf
@@ -28,7 +28,7 @@ output {
                 hosts => ["search-honey-logs-spvjcde43yj66qf35ei5ohric4.us-east-2.es.amazonaws.com"]
                 region => "us-east-2"
                 aws_access_key_id => "AKIAZXDFCMDMYSIKJH6H"
-                aws_secret_access_key => "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"
+                aws_secret_access_key => ""
                 index => "honey-logs"
         }
 }
