--- a/pipeline.conf
+++ b/pipeline.conf
@@ -27,7 +27,7 @@ output {
         amazon_es {
                 hosts => ["search-honey-logs-spvjcde43yj66qf35ei5ohric4.us-east-2.es.amazonaws.com"]
                 region => "us-east-2"
-                aws_access_key_id => "AKIAZXDFCMDMYSIKJH6H"
+                aws_access_key_id => ""
                 aws_secret_access_key => ""
                 index => "honey-logs"
         }
